SUBDIRS = . src include

bin_PROGRAMS = tetrabot

tetrabot_SOURCES = Actions.cpp ActionControleurRobot.cpp ActionPiston.cpp \
	AlgoGen_Tetra.cpp ControleurRobot.cpp GL_Piston.cpp Noeud.cpp \
	 Piston.cpp Rendering.cpp Resultat.cpp Robot_Tetra.cpp Sinusoide.cpp \
	TetraRendering.cpp Thread.cpp WorldPhysic.cpp \
	Action.h ActionControleurRobot.h ActionPiston.h AlgoGen.h \
	AlgoGen_Tetra.h Caracteristiques.h Composant.h ControleurRobot.h \
	GL_Piston.h Noeud.h Piston.h Rendering.h Resultat.h Robot.h \
	Robot_Tetra.h Sinusoide.h TetraMotionState.h TetraRendering.h \
	Threads.h WorldPhysic.h

#_LDFLAGS
#_CPPFLAGS
#_CXXFLAGS
